WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
189599
ProcessSwap.BackWithoutSuspendedPage API test hits assertion under WebPageProxy::didCreateMainFrame()
https://bugs.webkit.org/show_bug.cgi?id=189599
Summary
ProcessSwap.BackWithoutSuspendedPage API test hits assertion under WebPagePro...
Chris Dumez
Reported
2018-09-13 11:59:21 PDT
ProcessSwap.BackWithoutSuspendedPage API test hits assertion under WebPageProxy::didCreateMainFrame(): ASSERTION FAILED: !m_mainFrame /Volumes/Data/slave/sierra-debug/build/Source/WebKit/UIProcess/WebPageProxy.cpp(3344) : void WebKit::WebPageProxy::didCreateMainFrame(uint64_t) 1 0x10c3509a9 WTFCrash 2 0x110f24beb WTFCrashWithInfo(int, char const*, char const*, int) 3 0x11178fa6b WebKit::WebPageProxy::didCreateMainFrame(unsigned long long) 4 0x11204de39 void IPC::callMemberFunctionImpl<WebKit::WebPageProxy, void (WebKit::WebPageProxy::*)(unsigned long long), std::__1::tuple<unsigned long long>, 0ul>(WebKit::WebPageProxy*, void (WebKit::WebPageProxy::*)(unsigned long long), std::__1::tuple<unsigned long long>&&, std::__1::integer_sequence<unsigned long, 0ul>) 5 0x11204dd98 void IPC::callMemberFunction<WebKit::WebPageProxy, void (WebKit::WebPageProxy::*)(unsigned long long), std::__1::tuple<unsigned long long>, std::__1::integer_sequence<unsigned long, 0ul> >(std::__1::tuple<unsigned long long>&&, WebKit::WebPageProxy*, void (WebKit::WebPageProxy::*)(unsigned long long)) 6 0x112035b4e void IPC::handleMessage<Messages::WebPageProxy::DidCreateMainFrame, WebKit::WebPageProxy, void (WebKit::WebPageProxy::*)(unsigned long long)>(IPC::Decoder&, WebKit::WebPageProxy*, void (WebKit::WebPageProxy::*)(unsigned long long)) 7 0x11202cafc WebKit::WebPageProxy::didReceiveMessage(IPC::Connection&, IPC::Decoder&) 8 0x112044244 non-virtual thunk to WebKit::WebPageProxy::didReceiveMessage(IPC::Connection&, IPC::Decoder&) 9 0x110fbfd9a IPC::MessageReceiverMap::dispatchMessage(IPC::Connection&, IPC::Decoder&) 10 0x1115989b4 WebKit::ChildProcessProxy::dispatchMessage(IPC::Connection&, IPC::Decoder&) 11 0x1117f604d WebKit::WebProcessProxy::didReceiveMessage(IPC::Connection&, IPC::Decoder&) 12 0x1117f6214 non-virtual thunk to WebKit::WebProcessProxy::didReceiveMessage(IPC::Connection&, IPC::Decoder&) 13 0x110f6c74a IPC::Connection::dispatchMessage(IPC::Decoder&) 14 0x110f5f891 IPC::Connection::dispatchMessage(std::__1::unique_ptr<IPC::Decoder, std::__1::default_delete<IPC::Decoder> >) 15 0x110f69e46 IPC::Connection::dispatchIncomingMessages() 16 0x110f8a292 IPC::Connection::enqueueIncomingMessage(std::__1::unique_ptr<IPC::Decoder, std::__1::default_delete<IPC::Decoder> >)::$_14::operator()() 17 0x110f8a1b9 WTF::Function<void ()>::CallableWrapper<IPC::Connection::enqueueIncomingMessage(std::__1::unique_ptr<IPC::Decoder, std::__1::default_delete<IPC::Decoder> >)::$_14>::call() 18 0x10c377c6d WTF::Function<void ()>::operator()() const 19 0x10c3cfd13 WTF::RunLoop::performWork() 20 0x10c3d06a4 WTF::RunLoop::performWork(void*) 21 0x7fff9611b3e1 __CFRUNLOOP_IS_CALLING_OUT_TO_A_SOURCE0_PERFORM_FUNCTION__ 22 0x7fff960fc65c __CFRunLoopDoSources0 23 0x7fff960fbb46 __CFRunLoopRun 24 0x7fff960fb544 CFRunLoopRunSpecific 25 0x7fff97b2c252 -[NSRunLoop(NSRunLoop) runMode:beforeDate:] 26 0x10b68d343 TestWebKitAPI::Util::run(bool*) 27 0x10b50153f ProcessSwap_BackWithoutSuspendedPage_Test::TestBody() 28 0x10b83731a void testing::internal::HandleSehExceptionsInMethodIfSupported<testing::Test, void>(testing::Test*, void (testing::Test::*)(), char const*) 29 0x10b7e38a7 void testing::internal::HandleExceptionsInMethodIfSupported<testing::Test, void>(testing::Test*, void (testing::Test::*)(), char const*) 30 0x10b7e37e5 testing::Test::Run() 31 0x10b7e540d testing::TestInfo::Run()
Attachments
Patch
(5.91 KB, patch)
2018-09-13 12:16 PDT
,
Chris Dumez
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Chris Dumez
Comment 1
2018-09-13 12:16:47 PDT
Created
attachment 349689
[details]
Patch
Geoffrey Garen
Comment 2
2018-09-13 12:56:10 PDT
Comment on
attachment 349689
[details]
Patch r=me
Chris Dumez
Comment 3
2018-09-13 13:52:39 PDT
Comment on
attachment 349689
[details]
Patch Clearing flags on attachment: 349689 Committed
r235988
: <
https://trac.webkit.org/changeset/235988
>
Chris Dumez
Comment 4
2018-09-13 13:52:41 PDT
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 5
2018-09-13 13:53:30 PDT
<
rdar://problem/44430388
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug